# schott-opportunity-finder

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.local.json
backend/: CLAUDE.md  main.py  prompt.py  retrieval.py  scoring.py
backend/ingest/: ingest_live.py  ingest_static.py  ingest_upload.py
frontend/: .thumbnail  CLAUDE.md  Signal.html  styles.css
frontend/src/: app.jsx  components.jsx  data.js  views.jsx
