[project]
name = "schott-opportunity-finder"
version = "0.1.0"
description = "RAG-based market intelligence tool for SCHOTT pharmaceutical glass opportunities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
]
